--- a/css/main.css
+++ b/css/main.css
@@ -141,6 +141,9 @@ img{
     background-color: white;
     color: black;
     transition: all 0.3s ease-in-out;
+
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .opcion:hover{
@@ -224,5 +227,21 @@ img{
 /*---------------------------------------Seccion anyadida a posteriori-------------------------------*/
 .oculto{
     display: none;
+}
+
+.menu_juego_vida{
+    position: absolute;
+
+    width: 100%;
+    height: 70px;
+    background-color: red;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+
+    display: flex;
+
+    flex-direction: row;
+    justify-content: space-around;
 }
 
