--- a/css/main.css
+++ b/css/main.css
@@ -233,7 +233,7 @@ img{
     position: absolute;
 
     width: 100%;
-    height: 70px;
+    height: 80px;
     background-color: red;
     left: 0px;
     bottom: 0px;
@@ -243,5 +243,7 @@ img{
 
     flex-direction: row;
     justify-content: space-around;
+
+    z-index: 99999;
 }
 
